--- a/db/mongo_deployment.yml
+++ b/db/mongo_deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongodb/mongodb-community-server:latest
+        image: mongo:5.0.14
         ports:
         - containerPort: 27017
         volumeMounts:
